--- a/todo.css
+++ b/todo.css
@@ -1,23 +1,31 @@
+*{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
 body{
     text-align: center;
     background-color: rgb(175, 174, 172);
+    
 }
 .greetings{
     font-size: 50px;
 }
 
 .input-todo{
-    padding: 4px;
+    padding: 4px 0px;
+    border-radius: 3px;
+    border-color: rgb(214, 214, 215);
 }
 .input-date{
     padding: 3px 20px ;
+    border-radius: 3px;
+    border-color: rgb(214, 214, 215);
 }
 .btn{
     background-color: black;
     color: white;
-    font-family:Arial, Helvetica, sans-serif;
     padding:4px 14px;
-    border-radius: 30px;
+    border-radius: 20px;
     cursor: pointer;
     border:0cap;
 }
@@ -25,4 +33,20 @@ body{
     background-color: rgb(151, 54, 54);
     border: 0cap;
     padding:4px 8px;
+}
+.js-display{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 10px;
+}
+.todo-container {
+  display: flex;          
+  align-items: center;    
+  gap: 50px;
+  margin-top: 50px;              
+  padding: 2px 55px;
+  border: 2px solid gray;
+  background-color: white;
+  border-radius: 5px;
 }
