--- a/todo.css
+++ b/todo.css
@@ -1,12 +1,13 @@
 *{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 body{
     text-align: center;
-    background-color: rgb(175, 174, 172);
+    background-color:lightgrey;
     
 }
+
 .greetings{
     font-size: 50px;
 }
@@ -44,9 +45,8 @@ body{
   display: flex;          
   align-items: center;    
   gap: 50px;
-  margin-top: 50px;              
+  margin-top: 50px;
+  background-color: white;              
   padding: 2px 55px;
-  border: 2px solid gray;
-  background-color: white;
-  border-radius: 5px;
+  border-radius: 3px;
 }
