--- a/todo.css
+++ b/todo.css
@@ -1,52 +1,69 @@
 *{
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    box-sizing: border-box;
 }
 
 body{
     text-align: center;
-    background-color:lightgrey;
-    
+    background-color: lightgrey;
+    padding: 60px;
 }
 
 .greetings{
-    font-size: 50px;
+    font-size: 80px;
+    margin-bottom: 50px;
 }
 
-.input-todo{
-    padding: 4px 0px;
-    border-radius: 3px;
-    border-color: rgb(214, 214, 215);
-}
+.input-todo,
 .input-date{
-    padding: 3px 20px ;
-    border-radius: 3px;
-    border-color: rgb(214, 214, 215);
+    font-size: 28px;
+    padding: 20px 26px;
+    border-radius: 10px;
+    border: 2px solid rgb(214, 214, 215);
+    width: 360px;
+    margin: 10px;
 }
+
 .btn{
+    font-size: 26px;
     background-color: black;
     color: white;
-    padding:4px 14px;
-    border-radius: 20px;
+    padding: 20px 40px;
+    border-radius: 40px;
     cursor: pointer;
-    border:0cap;
+    border: 0;
 }
+
 #red{
+    font-size: 22px;
     background-color: rgb(151, 54, 54);
-    border: 0cap;
-    padding:4px 8px;
+    padding: 16px 30px;
 }
+
 .js-display{
     display: flex;
     align-items: center;
     flex-direction: column;
-    gap: 10px;
+    gap: 30px;
+    margin-top: 60px;
 }
-.todo-container {
-  display: flex;          
-  align-items: center;    
-  gap: 50px;
-  margin-top: 50px;
-  background-color: white;              
-  padding: 2px 55px;
-  border-radius: 3px;
+
+.todo-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 40px;
+    width: 900px;
+    max-width: 100%;
+    background-color: white;
+    padding: 30px 40px;
+    border-radius: 16px;
 }
+
+.todo-container h4{
+    font-size: 30px;
+    margin: 0;
+    flex: 1;
+    text-align: left;
+}
+
